examples/semantics/errors/error11.grace
fun error11 () : nothing
	fun foo(i:int;c:char):nothing
	{
		i<-8;
	}
{
	foo('m',9);
}
